fix: remove route field from RideRequest, compute detour dynamically refactor: max factor